<resources>
    <string name="app_name">RecycleView</string>
    <string name="login">login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_user_register">New user? Register</string>
    <string name="create_new_account">Create new account</string>
    <string name="email_required">Email (Required)</string>
    <string name="password_required">Password (Required)</string>
    <string name="fullname">Fullname</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of Birth (dd/mm/yyyy)</string>
    <string name="phone_84">Phone (+84)</string>
    <string name="register">Register</string>
    <string name="login_to_new_account">Login to new account</string>
    <string name="log_out">Log out</string>
    <string name="user_update">User Update</string>
    <string name="update_profile">Update Profile</string>

</resources>