<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Register"
    android:padding="15dp"
    android:background="@drawable/welcome">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/user_update"
        android:textColor="#F5F5F5"
        android:textSize="25sp"
        android:textStyle="normal" />

    <!-- Nhập liệu tên -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_update_profile_name"
            android:hint="@string/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>
    <!-- Nhập liệu tuổi -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textView_update_dob"
            android:hint="@string/date_of_birth_dd_mm_yyyy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>
    <!-- Nhập liệu số điện thoại -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textView_update_mobile"
            android:hint="@string/phone_84"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="12dp"
        android:text="@string/update_profile"
        android:id="@+id/button_update_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginTop="12dp"
        android:text="Update Email"
        android:id="@+id/button_profile_update_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
